# f1manager_companion

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml
f1m_buddy/: Home.py  app.py
f1m_buddy/pages/: 1_File_Manager.py  1_testing.py  2_Database_Editor.py  2_Testing.py
f1m_buddy/src/: buddy.py  constants.py  unpacking.py  utils.py
f1m_buddy/tmp_pages/: 3_Testing.py  Home.py
f1m_companion/: Home.py
f1m_companion/common/: column_translators.py  components.py  constants.py  database_translator.py  initialize.py  savefile.py  translators.py  types.py  utils.py
f1m_companion/common/xaranaktu/: unpacking.py
f1m_companion/pages/: 1_File_Manager.py  2_Advanced_Editor.py  2_Simple_Editor.py  3_Advanced_Editor.py
f1m_companion/tmp_pages/: 2_Testing_tmp.py  3_Testing.py  Home.py
src/: README.md  unpacking.py
