[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
no_warn_no_return = true
python_version = 3.11
warn_return_any = true

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "f1manager-db-editor"
packages = [
    {include = "src/", from = "f1m_buddy/src"}
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pandas = "^2.0.3"
pendulum = "^2.1.2"
python = "^3.11"
streamlit = "^1.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ipython = "^8.14.0"
mypy = "^1.4.1"
pandas-stubs = "^2.0.2.230605"
pre-commit = "^3.3.3"
ruff = "^0.0.282"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv"
]
ignore = []
per-file-ignores = {}
# Enable Flake's "E" and "F" codes by default.
select = ["E", "F", "I"]
target-version = "py311"
